# ribbon

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/ribbon/: Cargo.toml
crates/ribbon/src/: error.rs  main.rs
crates/ribbon/src/discord/: interactions.rs  mod.rs
crates/ribbon/src/discord/gateway/: mod.rs
crates/ribbon/src/discord/gateway/event/: guild.rs  mod.rs
crates/ribbon_cache/: Cargo.toml
crates/ribbon_cache/src/: discord.rs  error.rs  lib.rs  ribbon.rs  roblox.rs
crates/ribbon_commands/: Cargo.toml
crates/ribbon_commands/src/commands/: mod.rs
crates/ribbon_commands/src/commands/guild/: mod.rs
crates/ribbon_commands_core/: Cargo.toml
crates/ribbon_commands_core/src/: command.rs  util.rs
crates/ribbon_commands_core_macros/src/: lib.rs  util.rs
crates/ribbon_frontend/: Cargo.toml
crates/ribbon_frontend/src/: auth.rs  error.rs  lib.rs
crates/ribbon_frontend/src/routes/v1/: auth.rs  mod.rs  roblox_callback.rs  servers.rs
crates/ribbon_frontend/src/templates/connection_callback/: mod.rs
crates/ribbon_models/: Cargo.toml
crates/ribbon_models/src/: error.rs
crates/ribbon_models/src/discord/: mod.rs
crates/ribbon_models/src/discord/guild/: mod.rs
crates/ribbon_models/src/ribbon/: authorise_request.rs  mod.rs  server.rs
crates/ribbon_models/src/ribbon/member_link/: connector.rs  criteria.rs  mod.rs
crates/ribbon_models/src/ribbon/user/: mod.rs  roblox_account.rs  session.rs  website_quick_link.rs
crates/ribbon_models/src/roblox/group/: membership.rs
crates/ribbon_syncing/: Cargo.toml
crates/ribbon_syncing/src/: lib.rs
crates/ribbon_util/: Cargo.toml
crates/ribbon_util/src/: emoji.rs  lib.rs
