[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"
homepage = "https://github.com/hakusoda/ribbon"
repository = "https://github.com/hakusoda/ribbon"
rust-version = "1.79"

[workspace.dependencies]
actix-web = "4.8.0"
async-once-cell = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.38"
dashmap = { version = "6.0.1", features = ["inline"] }
futures = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.22"
once_cell = "1.19.0"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.121"
serde_repr = "0.1.19"
sqlx = { version = "0.7.4", features = ["uuid", "json", "chrono", "macros", "postgres", "tls-native-tls", "rust_decimal", "runtime-tokio"] }
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "f963532", features = ["simd-json"] }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", rev = "f963532", features = ["simd-json"] }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", rev = "f963532" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "f963532", features = ["builder"] }
urlencoding = "2.1.3"
uuid = "1.10.0"
validator = "0.18.1"

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3
incremental = false
codegen-units = 1
debug-assertions = false